<resources>
    <string name="app_name">Wallet</string>

    <string name="welcome_des">欢迎使用</string>
    <string name="home">首页</string>
    <string name="deal">广告</string>
    <string name="message">消息</string>
    <string name="myInfo">我的</string>

    <string name="todayIncome">今日收入</string>
    <string name="thisMonthIncome">本月收入</string>
    <string name="saleCoin">卖币</string>
    <string name="myOrder">我的订单</string>
    <string name="dataCount">数据统计</string>
    <string name="exchangeCoin">兑换比特币</string>
    <string name="pendingOrder">待处理订单</string>
    <string name="totalIncome">总收入</string>
    <string name="coinUnit">元</string>
    <string name="totalOrder">总订单数</string>
    <string name="coinUnit2">个</string>
    <string name="chooseCoinType">选择币种</string>
    <string name="coinType">AB</string>
    <string name="chooseMoneyType">货币类型</string>
    <string name="moneyType">人民币</string>
    <string name="unitPrice">单价</string>
    <string name="exchangeMoneyRate">AB:人民币=1:1</string>
    <string name="minLimit">最小限额</string>
    <string name="maxLimit">最大限额</string>
    <string name="saleNum">卖出数量</string>
    <string name="paymentTime">付款期限</string>
    <string name="timeUnit">分钟</string>
    <string name="fixAmount">固定金额</string>
    <string name="payType">支付方式:</string>
    <string name="hint_1">买家需要在付款期限内转账并点击确认付款，超过时限该笔交易将自动取消，您可以依据不同的交易方式来调整时限。</string>
    <string name="payTypeZFB">支付宝</string>
    <string name="payTypeWeChat">微信</string>
    <string name="payTypeBank">银行卡</string>
    <string name="fastReply">快速回复:</string>
    <string name="fastReplyHint">用户下单看到的快捷回复，可填写付款要求。</string>
    <string name="buyLimit">买家限制:</string>
    <string name="publishAdvertisement">发布广告</string>
    <string name="singleTradeLimit">单笔交易限额</string>
    <string name="singleTradeConstant">单笔交易固额</string>
    <string name="safeVerifier">安全验证</string>
    <string name="cancelVerifier">取消</string>
    <string name="payPwd">支付密码</string>
    <string name="googleVerifierCode">谷歌验证码</string>
    <string name="payPwdHint">请输入支付密码</string>
    <string name="googleCodeHint">请输入谷歌验证码</string>
    <string name="btnSure">确定</string>
    <string name="publishSuccess">发布成功</string>
    <string name="coinTypeText">币种:</string>
    <string name="coinTypeNum">数量:</string>
    <string name="coinTypePrice">单价:</string>
    <string name="paymentType">收款方式:</string>
    <string name="singleOrderLimit">单笔限额:</string>
    <string name="backHome">返回首页</string>
    <string name="checkAdvertisement">查看广告</string>
    <string name="hint_2">用户下单看到的快捷回复，可填写付款要求。</string>
    <string name="pleaseCheckProtocol">请先勾选协议</string>
    <string name="checkGetMoneyGo">请确认收到款项后再放行</string>
    <string name="hadPayMoney">对方已确认付款</string>
    <string name="orderNum">数量</string>
    <string name="give_user_hint">请再15分钟内处理，超时将影响卖家信誉</string>
    <string name="give_user_hint2">对方未在15分钟内支付，订单已关闭</string>
    <string name="rollOutNum">转出数量</string>
    <string name="getNum">收到数量</string>
    <string name="theCoinWalletAddress">比特币钱包收币地址</string>
    <string name="submitApply">提交申请</string>
    <string name="myApply">我的申请</string>
    <string name="ab">出售AB</string>
    <string name="checkTexid">查看Txid</string>
    <string name="empty_trade_des">啊哦,暂无广告</string>
    <string name="order_inform">订单通知</string>
    <string name="connect_service">联系客服</string>
    <string name="system_inform">系统通知</string>
    <string name="delete_des">如果删除当前支付方式，所有启用该支付方式的广告也将被下架。</string>
    <string name="title_activity_commit_complain">CommitComplainActivity</string>
</resources>
