<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PublishAdvertisementActivity"
    android:background="#F6F5FA">

    <include layout="@layout/title_bar2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.12"
        />

    <View
        app:layout_constraintTop_toBottomOf="@id/cl_root_view"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/shape_gray3_round_bg"
        android:id="@id/tv_1"/>


    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/cl_root_view"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="50dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:orientation="vertical"
        android:background="#ffffff">

        <RelativeLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_complete"
                android:id="@+id/iv_complete"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/iv_complete"
                android:textSize="24sp"
                android:textColor="@color/gray_3"
                android:text="@string/publishSuccess"
                android:gravity="center_vertical"/>

        </RelativeLayout>


        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F0F1F3"/>
        <!--style="@style/main_tab_style"-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="23dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_6"
                android:textSize="15sp"
                android:text="@string/coinTypeText"
                android:id="@+id/tv_1"
                />

            <TextView
                android:layout_toRightOf="@id/tv_1"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_3"
                android:textSize="15sp"
                android:text="UG"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="23dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_6"
                android:textSize="15sp"
                android:text="@string/coinTypeNum"
                android:id="@+id/tv_2"
                />

            <TextView
                android:layout_toRightOf="@id/tv_2"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_3"
                android:textSize="15sp"
                android:text="590 AB"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="23dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_6"
                android:textSize="15sp"
                android:text="@string/coinTypePrice"
                android:id="@+id/tv_3"
                />

            <TextView
                android:layout_toRightOf="@id/tv_3"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_3"
                android:textSize="15sp"
                android:text="100 CNY = 1 AB"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="23dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_6"
                android:textSize="15sp"
                android:text="@string/paymentType"
                android:id="@+id/tv_4"
                />

            <TextView
                android:layout_toRightOf="@id/tv_4"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_3"
                android:textSize="15sp"
                android:text="支付宝"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="23dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_6"
                android:textSize="15sp"
                android:text="@string/singleOrderLimit"
                android:id="@+id/tv_5"
                />

            <TextView
                android:layout_toRightOf="@id/tv_5"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_3"
                android:textSize="15sp"
                android:text="1000 ~ 23000"
                />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sold_out"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                android:text="@string/backHome"
                android:background="@drawable/shape_blue1_bg"
                />


            <Button
                android:layout_marginLeft="8dp"
                android:id="@+id/btn_change_advertisement"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:text="@string/checkAdvertisement"
                android:background="@drawable/shape_blue_bg"
                />

        </LinearLayout>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>