<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activity.ConvertCoinActivity">

    <include layout="@layout/title_bar2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.08"
        />

    <View
        app:layout_constraintTop_toBottomOf="@id/cl_root_view"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray_10"
        android:id="@+id/line6"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/line6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_style_20sp_blue"
        android:text="汇率0.50"
        android:id="@+id/tv_exchange_rate"
        />


    <View
        app:layout_constraintTop_toBottomOf="@id/tv_exchange_rate"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_10"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/line7"/>



    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/line7"
        android:id="@+id/rl_trade_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:id="@+id/rl_coin_type"
            android:background="@drawable/shape_gray_round_bg"
            android:layout_marginStart="40dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_ab"
                android:layout_centerVertical="true"
                android:layout_marginStart="28dp"
                android:scaleY="0.6"
                android:scaleX="0.6"
                android:id="@+id/iv_ab_icon"/>



            <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/iv_ab_icon"
                android:id="@+id/tv_coin_desc"
                android:textColor="@color/gray_3"
                android:layout_marginLeft="-5dp"
                android:text="AB"
                />


        </RelativeLayout>


        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:id="@+id/et_input_coin_num"
            android:textColor="@color/gray_3"
            android:background="@drawable/shape_gray_round_bg"
            android:layout_below="@id/rl_coin_type"
            android:hint="@string/rollOutNum"
            android:gravity="center"
            style="@style/text_style_15sp_gray_11"
            android:layout_marginStart="40dp"
            android:inputType="number"/>



        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:id="@+id/rl_bc_coin"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_gray_round_bg"
            android:layout_marginRight="40dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_btc"
                android:layout_centerVertical="true"
                android:layout_marginStart="23dp"
                android:scaleY="0.6"
                android:scaleX="0.6"
                android:id="@+id/iv_b_icon"/>



            <TextView
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/iv_b_icon"
                android:id="@+id/tv_b_coin_desc"
                android:textColor="@color/gray_3"
                android:layout_marginLeft="-8dp"
                android:text="BTC"
                />


        </RelativeLayout>

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:id="@+id/et_get_coin_num"
            android:background="@drawable/shape_gray_round_bg"
            android:layout_below="@id/rl_bc_coin"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:text="@string/getNum"
            style="@style/text_style_15sp_gray_11"
            android:gravity="center"
            android:inputType="number"/>


        <View
            android:layout_width="20dp"
            android:layout_height="1dp"
            android:background="#394368"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/rl_trade_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_style_14sp_gray_11"
        android:text="@string/theCoinWalletAddress"
        android:id="@+id/tv_wallet_add_des"/>


    <EditText
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_wallet_add_des"
        android:background="@drawable/shape_gray_bg"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="0Zgds56lkhg4GyGH78"
        android:paddingLeft="10dp"
        style="@style/text_style_15sp_gray_6"
        android:id="@+id/et_input_wallet_address"/>


    <TextView
        app:layout_constraintTop_toBottomOf="@id/et_input_wallet_address"
        android:layout_width="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_height="40dp"
        android:text="@string/submitApply"
        style="@style/text_style_16sp_white_1"
        android:background="@drawable/shape_blue_bg_round10"
        android:id="@+id/tv_submit_apply"/>



    <View
        app:layout_constraintTop_toBottomOf="@id/tv_submit_apply"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray_10"
        android:layout_marginTop="20dp"
        android:id="@+id/line8"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/line8"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/myApply"
        style="@style/text_style_13sp_gray_6"
        android:id="@+id/tv_my_apply"/>


    <View
        app:layout_constraintTop_toBottomOf="@id/tv_my_apply"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_10"
        android:layout_marginTop="5dp"
        android:id="@+id/line9"/>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/line9"
        android:paddingBottom="1dp"
        app:layout_constraintHeight_percent="0.38"
        android:id="@+id/rv_my_apply"
        />



</android.support.constraint.ConstraintLayout>